# seeed-erpc-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rustfmt.yml  test.yml
src/: codec.rs  ids.rs  lib.rs  system_rpcs.rs  tcpip_rpcs.rs  wifi_rpcs.rs
