[package]
name = "seeed-erpc"
version = "0.1.3"
authors = ["Tom <twitchyliquid64@ciphersink.net>"]
edition = "2018"
description = "Driver crate for interacting with seeed-studio eRPC Wifi devices."
documentation = "https://docs.rs/seeed-erpc/"
readme = "README.md"
repository = "https://github.com/twitchyliquid64/seeed-erpc-rs"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "embedded-hal", "no-std", "seeed", "wio-terminal"]
categories = ["embedded", "hardware-support", "no-std"]

exclude = ["assets", "examples"]

[dependencies]
bitfield = "0.13"
bitflags = "1.2"
heapless = "0.8.0"
bbqueue = "^0.4.11"
nom = { version = "8.0", default-features = false }
generic-array = { version = "0.14" }
no-std-net = "0.5"

[dev-dependencies]
env_logger = "0.11.8"
